--- a/Dusza-Fogadas/MainWindow.xaml
+++ b/Dusza-Fogadas/MainWindow.xaml
@@ -84,7 +84,7 @@
 
         <ControlTemplate x:Key="xButton" TargetType="{x:Type Button}">
             <Border x:Name="Border" 
-                    Background="#d95050"
+                    Background="#db5c5c"
                     BorderBrush="#820000"
                     BorderThickness="2" 
                     CornerRadius="3">
@@ -92,7 +92,7 @@
             </Border>
             <ControlTemplate.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#b53131" TargetName="Border" />
+                    <Setter Property="Background" Value="#bd4848" TargetName="Border" />
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
@@ -165,7 +165,7 @@
                     Height="70"
                     CornerRadius="3"
                     Opacity="0.85"
-                    Background="#eb6c6c"
+                    Background="#e68383"
                     HorizontalAlignment="Center"
                     Visibility="Collapsed">
                 <StackPanel Orientation="Horizontal">
