--- a/Dusza-Fogadas/Menu.xaml
+++ b/Dusza-Fogadas/Menu.xaml
@@ -19,6 +19,11 @@
             <ControlTemplate.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Background" Value="#d1d1d1" TargetName="Border" />
+                    <Setter Property="BorderBrush" Value="#0d0d0d" TargetName="Border" />
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="BorderBrush" Value="Black" TargetName="Border" />
+                    <Setter Property="Background" Value="#c4c4c4" TargetName="Border" />
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
@@ -34,6 +39,9 @@
             <ControlTemplate.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Background" Value="#de4747" TargetName="Border" />
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Background" Value="#e33232" TargetName="Border" />
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
